fixing z-index Problem e.g. with CKEditor full screen size

--- a/css/jquery_ui_dialog.main.css
+++ b/css/jquery_ui_dialog.main.css
@@ -9,7 +9,11 @@
 }
 
 .jquery_ui_dialog-dialog-wrapper {
-	z-index:10001;
+	z-index:10011;
+}
+
+.jquery_ui_dialog-dialog-wrapper .jquery_ui_dialog-dialog{
+  z-index:10011 !important;
 }
 
 .ui-widget-overlay {
